2007-06-20  Matt Perry  <mpComplete@gmail.com>

Reviewed by Adam.

        - Fix http://bugs.webkit.org/show_bug.cgi?id=14251:
          onchange handler for select controls doesn't fire when changing via keyboard

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::menuListDefaultEventHandler): Got rid of
        a call to saveLastSelection in the "Enter" key handler for select
        controls that was preventing onchange from firing.


Canonical link: https://commits.webkit.org/18621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23845 268f45cc-cd09-0410-ab3c-d52691b4dbfc